--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@kadiryazici/vue-on",
-   "version": "0.0.1",
+   "version": "0.0.3",
    "description": "Collection of event utilities for vue3 composition api.",
    "files": [
       "dist"
@@ -16,7 +16,8 @@
    "types": "./dist/types/index.d.ts",
    "scripts": {
       "dev": "vite",
-      "build": "vite build && tsc --emitDeclarationOnly"
+      "build": "vite build && tsc --emitDeclarationOnly",
+      "release": "node scripts/release.js"
    },
    "repository": {
       "type": "git",
@@ -35,6 +36,8 @@
       "@types/fs-extra": "^9.0.13",
       "@types/node": "^16.10.1",
       "@vue/runtime-dom": "^3.2.0",
+      "enquirer": "^2.3.6",
+      "execa": "^5.1.1",
       "fs-extra": "^10.0.0",
       "typescript": "^4.4.3",
       "vite": "^2.5.7"
