--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@kadiryazici/vue-on",
-   "version": "0.0.11",
+   "version": "0.1.0",
    "description": "Collection of event utilities for vue3 composition api.",
    "files": [
       "dist"
@@ -35,17 +35,18 @@
    "devDependencies": {
       "@types/fs-extra": "^9.0.13",
       "@types/node": "^16.10.1",
-      "@vue/runtime-dom": "^3.2.0",
+      "@vitejs/plugin-vue-jsx": "^1.1.8",
       "enquirer": "^2.3.6",
       "execa": "^5.1.1",
       "fs-extra": "^10.0.0",
       "typescript": "^4.4.3",
-      "vite": "^2.5.7"
+      "vite": "^2.5.7",
+      "vue": "^3.2.0"
    },
    "dependencies": {
       "nanoid": "^3.1.25"
    },
    "peerDependencies": {
-      "@vue/runtime-dom": "^3.2.0"
+      "vue": "^3.2.0"
    }
 }
